# iqrf-gateway-daemon

./: .codeclimate.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  README.md  apitesting.docker-compose.yml  build.dockerfile  build.dockerfile.stretch.amd64  build64.bat  build64_2017.bat  build64_2022.bat  buildEclipse.sh  buildEclipseRel.sh  buildMake.sh  buildMakeRel.sh  buildPackage.sh  building.md  building.txt  gcovr.cfg  iqrf-gateway-daemon-build.txt  iqrf-gateway-daemon-install.txt  iqrf-gateway-daemonConfig.cmake.in  runTests.sh  run_tests.sh
BaseService/: BaseService.cpp  BaseService.h  CMakeLists.txt  JsonSerializer.h
IqrfDpa/: CMakeLists.txt  IqrfDpa.cpp  IqrfDpa.h  IqrfDpaChannel.h  IqrfDpaTracer.cpp  Prf.h  PrfEnum.cpp  PrfEnum.h  PrfOs.cpp  PrfOs.h
IqrfUart/: CMakeLists.txt  IqrfUart.cpp  IqrfUart.h
JsonDpaApiIqrfStandard/: CMakeLists.txt  ComIqrfStandard.h  DuktapeStuff.cpp  DuktapeStuff.h  JsonDpaApiIqrfStandard.cpp  JsonDpaApiIqrfStandard.h
MqMessaging/: CMakeLists.txt  IChannel.h  MqChannel.cpp  MqMessaging.cpp  MqMessaging.h
MqttMessaging/: CMakeLists.txt  MqttMessaging.cpp  MqttMessaging.h
Scheduler/: CMakeLists.txt  ScheduleRecord.cpp  ScheduleRecord.h  Scheduler.cpp  Scheduler.h  Scheduler2.cpp  Scheduler2.h
UdpMessaging/: CMakeLists.txt  UdpChannel.cpp  UdpChannel.h  UdpMessaging.cpp  UdpMessaging.h
WebsocketMessaging/: CMakeLists.txt  WebsocketMessaging.cpp  WebsocketMessaging.h
src/: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README-OffgridMcu.md  README.md  VersionInfo.h.in  build64_2017.bat  buildEclipse.sh  buildPackage.sh  iqrf-gateway-daemon-build.txt
src/.gitlab_build_files/: copy_daemon_files_devel.sh  copy_daemon_files_release.sh  copy_shape_libs.sh  copy_shapeware_libs.sh  create_daemon_package_dbg.sh
src/ApiTokenCtl/: CMakeLists.txt  cli_utils.cpp  cli_utils.h  commands.cpp  commands.h  exceptions.h  main.cpp  status_codes.h
src/ApiTokenService/: ApiTokenService.cpp  ApiTokenService.h  CMakeLists.txt
src/AuthService/: AuthService.cpp  AuthService.h  CMakeLists.txt
src/BufferedMqttMessaging/: BufferedMqttMessaging.cpp  BufferedMqttMessaging.h  CMakeLists.txt
src/DbEntities/: BaseEntity.h  BinaryOutput.h  CMakeLists.txt  Dali.h  Device.h  DeviceSensor.h  Driver.h  Entities.h  Light.h  Product.h  ProductDriver.h  Sensor.h
src/DpaParser/: BinaryOutput.h  CMakeLists.txt  Dali.h  DpaCommandSolver.h  EmbedCoordinator.h  EmbedEEEPROM.h  EmbedExplore.h  EmbedFRC.h  EmbedNode.h  EmbedOS.h  Frc.h  JsDriverBinaryOutput.h  JsDriverDali.h  JsDriverDpaCommandSolver.h  JsDriverEmbedCoordinator.h  JsDriverEmbedEEEPROM.h  JsDriverEmbedExploration.h  JsDriverEmbedOS.h  JsDriverFrc.h  JsDriverLight.h  JsDriverSensor.h  JsDriverStandardFrcSolver.h  Light.h  RawAny.h  RawDpaCommandSolver.h  RawDpaEmbedCoordinator.h  RawDpaEmbedEEEPROM.h  RawDpaEmbedExplore.h  RawDpaEmbedFRC.h  RawDpaEmbedOS.h  Sensor.h  dummy.cpp
src/FrcResponseTime/: FrcResponseTime.cpp  FrcResponseTimeResult.h
src/GwMonitorService/: CMakeLists.txt  GwMonitorService.cpp  GwMonitorService.h
src/IbmMessaging/: CMakeLists.txt  IbmMessaging.cpp  IbmMessaging.h
src/IdeCounterpart/: CMakeLists.txt  IdeCounterpart.cpp  IdeCounterpart.h  UdpMessage.h  crc.h
src/IqrfBackup/: CMakeLists.txt  IqrfBackup.cpp  IqrfBackup.h
src/IqrfCdc/: CMakeLists.txt  IqrfCdc.cpp  IqrfCdc.h
src/IqrfDb/: CMakeLists.txt  IqrfDb.cpp  IqrfDb.h  IqrfDbAux.cpp  IqrfDbAux.h  Migrations.h  QueryHandler.cpp  QueryHandler.h  Storage.h
src/IqrfDpa/: CMakeLists.txt  IqrfDpa.cpp  IqrfDpa.h  IqrfDpaChannel.h  IqrfDpaTracer.cpp  Prf.h  PrfEnum.cpp  PrfOs.cpp  PrfOs.h
src/IqrfInfo/: CMakeLists.txt  InfoBinaryOutput.h  InfoDali.h  InfoLight.h  InfoNode.h  InfoSensor.h  IqrfInfo.cpp  IqrfInfo.h  IqrfInfo.md
src/IqrfNetworkEnum/: CMakeLists.txt  EnumerationStructures.h  IqrfNetworkEnum.cpp  IqrfNetworkEnum.h
src/IqrfNetworkInfo/: CMakeLists.txt  IqrfNetworkInfo.cpp  IqrfNetworkInfo.h
src/IqrfRestore/: CMakeLists.txt  IqrfRestore.cpp  IqrfRestore.h
src/IqrfSensorData/: CMakeLists.txt  IqrfSensorData.cpp  IqrfSensorData.h  SensorDataResult.h
src/IqrfSpi/: CMakeLists.txt  IqrfSpi.cpp  IqrfSpi.h
src/IqrfTcp/: CMakeLists.txt  IqrfTcp.cpp  IqrfTcp.h
src/IqrfUart/: CMakeLists.txt  IqrfUart.cpp  IqrfUart.h
src/IqrfUartWin/: CMakeLists.txt  IqrfUartWin.cpp  IqrfUartWin.h
src/JsCache/: CMakeLists.txt  JsCache.cpp  JsCache.h
src/JsDriverService/: CMakeLists.txt  JsDriverService.cpp  JsDriverService.h
src/JsRenderDuktape/: CMakeLists.txt  Context.cpp  Context.h  JsRenderDuktape.cpp  JsRenderDuktape.h
src/JsonCfgApi/: CMakeLists.txt  JsonCfgApi.cpp  JsonCfgApi.h
src/JsonDbApi/: CMakeLists.txt  JsonDbApi.cpp  JsonDbApi.h
src/JsonDpaApiIqrfStandard/: CMakeLists.txt  ComIqrfStandard.h  FakeTransactionResult.h  JsonDpaApiIqrfStandard.cpp  JsonDpaApiIqrfStandard.h
src/JsonDpaApiIqrfStdExt/: ApiMsgIqrfStandardFrc.h  CMakeLists.txt  ComIqrfStandardExt.h  JsonDpaApiIqrfStdExt.cpp  JsonDpaApiIqrfStdExt.h
src/JsonDpaApiIqrfStdExt1/: JsonDpaApiIqrfStdExt.h
src/JsonDpaApiIqrfStdSpec/: CMakeLists.txt  ComIqrfStandardExt.h  Dali.h  Frc.h  IqrfSensorFrc.h  JsDriverDali.h  JsDriverFrc.h  JsDriverGenericSolver.h  JsDriverStandardFrcSolver.h  JsonDpaApiIqrfStdSpec.cpp  JsonDpaApiIqrfStdSpec.h
src/JsonDpaApiRaw/: CMakeLists.txt  ComRaws.h  FakeAsyncTransactionResult.h  JsonDpaApiRaw.cpp  JsonDpaApiRaw.h
src/JsonIqrfInfoApi/: CMakeLists.txt  JsonIqrfInfoApi.cpp  JsonIqrfInfoApi.h  JsonIqrfInfoMsgStatus.h
src/JsonMngApi/: CMakeLists.txt  JsonMngApi.cpp  JsonMngApi.h
src/JsonMngMetaDataApi/: CMakeLists.txt  JsonMngMetaDataApi.cpp  JsonMngMetaDataApi.h  mngMetaDataMsgStatus.h
start-IqrfDaemon/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  task_queue.cpp
tests/: ApiTokenUtilsTest.cpp  CMakeLists.txt  CryptoUtilsTest.cpp  DatabaseUtilsTest.cpp  DatabaseUtiltsTest.cpp  DateTimeUtilsTest.cpp  DatetimeParserTest.cpp  TaskQueueTest.cpp  TimeConversionTest.cpp  WebsocketServerUtils.cpp  WebsocketServerUtilsTest.cpp
(+3633 files in other folders)
