project(IqrfDaemon)

cmake_minimum_required(VERSION 3.0)

enable_testing()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

add_subdirectory(include)
add_subdirectory(start-IqrfDaemon)
add_subdirectory(Scheduler)
add_subdirectory(IqrfCdc)
add_subdirectory(IqrfSpi)
#if (NOT WIN32)
  add_subdirectory(IqrfUart)
#endif()
add_subdirectory(IqrfDpa)
add_subdirectory(LegacyApiSupport)
add_subdirectory(MqMessaging)
add_subdirectory(MqttMessaging)
add_subdirectory(WebsocketMessaging)
add_subdirectory(UdpMessaging)
add_subdirectory(IdeCounterpart)
add_subdirectory(JsonSplitter)
add_subdirectory(JsonDpaApiRaw)
add_subdirectory(JsonMngApi)
add_subdirectory(JsonMngMetaDataApi)
add_subdirectory(JsonCfgApi)
add_subdirectory(JsCache)
add_subdirectory(JsRenderDuktape)
add_subdirectory(JsonDpaApiIqrfStandard)
add_subdirectory(JsonDpaApiIqrfStdExt)
add_subdirectory(SchedulerMessaging)


# IDE folder for IQMesh services
set(IQMESH_SERVICES_FOLDER "iqmesh")
add_subdirectory(IqmeshServices/BondNodeLocalService)
add_subdirectory(IqmeshServices/SmartConnectService)
add_subdirectory(IqmeshServices/OtaUploadService)
add_subdirectory(IqmeshServices/ReadTrConfService)
add_subdirectory(IqmeshServices/WriteTrConfService)
add_subdirectory(IqmeshServices/EnumerateDeviceService)
add_subdirectory(NativeUpload)
add_subdirectory(IqmeshServices/AutonetworkService)
add_subdirectory(IqmeshServices/RemoveBondService)

if(${BUILD_TESTING})
  add_subdirectory(tests)
endif()

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/VersionInfo.h.in ${CMAKE_BINARY_DIR}/VersionInfo.h @ONLY)
